# ColorPicker

./: #Layout.glade#  .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  Layout.glade  Layout.glade~  README.md  com.github.ronnydo.colorpicker.yml  dev-build.sh  meson.build
data/: com.github.ronnydo.colorpicker.appdata.xml  com.github.ronnydo.colorpicker.appdata.xml.in  com.github.ronnydo.colorpicker.desktop  com.github.ronnydo.colorpicker.desktop.in  com.github.ronnydo.colorpicker.desktop~  com.github.ronnydo.colorpicker.gschema.xml  meson.build
debian/: changelog  control  control~  copyright  copyright~  rules
po/: LINGUAS  POTFILES.in  bg.po  ca.po  com.github.ronnydo.colorpicker.pot  de.po  es.po  fr.po  nl.po  pl.po  pt.po  pt_PT.po  tr.po
po/extra/: POTFILES  POTFILES.in  extra.pot
src/: ColorPicker  ColorPicker.vala  ColorPicker.vala~  ColorPickerWindow.vala  ColorPickerWindow.vala~  ExtRGBA.vala  meson.build
src/Services/: Settings.vala
src/Widgets/: ColorArea.vala  ColorArea.vala~  ColorHistory.vala  ColorHistory.vala~  MousePosition.vala  Picker.vala
